platform/15-portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal
  namespace: uwv-platform
  annotations:
    cert-manager.io/cluster-issuer: uwv-platform-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["platform.uwv-platform.local"]
      secretName: portal-tls
  rules:
    - host: platform.uwv-platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal
                port:
                  number: 80
